# AlphaPower

./: .env.test  .gitignore  .pylintrc  README.md  __main__.py  config.json  local_db_manager.py  pyproject.toml  pytest.ini  sync_alphas_from_api.py  sync_dataset.py
.github/: copilot-instructions.md
alphapower/: __init__.py  __main__.py  requirements.txt
alphapower/client/: core.py
alphapower/config/: settings.py
alphapower/docs/diagrams/: simulation_task_statemachine.wsd
alphapower/docs/openapi/: worldquant.yaml
alphapower/examples/alpha_template_engine/: generate_single_alpha_expression.py
alphapower/internal/entity/: __init__.py  data.py  simulation.py
alphapower/internal/http_api/: __init__.py  data.py  other.py  simulation.py  simulations.py  user.py
alphapower/internal/storage/: __init__.py  session.py
alphapower/internal/utils/: logging.py  services.py
alphapower/internal/wraps/: db_session.py  exception.py  log_time_elapsed.py
alphapower/services/: sync_datasets.py
alphapower/tests/test_client/: test_core.py
alphapower/tests/test_services/: test_sync_datasets.py
alphapower/tests/test_utils/: test_logging.py
benchmarks/: scheduler_benchmark.py
command/: sync_alphas.py  sync_datafields.py  sync_datasets.py
docs/: ER_diagram.wsd  sync_datafields.wsd
frontend/: package-lock.json  package.json
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/: TablerScope.tsx
frontend/src/routes/: alphas.tsx  tabler-demo.tsx
frontend/src/styles/: tabler.css
model/: __init__.py  _session.py  session.py
model/entity/: _alphas.py  _data.py  alpha_simulate_result.py
src/alphapower/: __init__.py  _version.py  constants.py  enum.py  exceptions.py  fixed_message.py  main.py  settings.py
src/alphapower/client/: __init__.py  checks_view.py  client_abc.py  common_view.py  core.py  httpx_client.py  models.py  raw_api.py  utils.py  worldquant_brain_client.py  worldquant_brain_client_abc.py
src/alphapower/config/: settings.py
src/alphapower/dal/: __init__.py  alphas.py  base.py  checks.py  data.py  evaluate.py  registry.py  session_manager.py  simulation.py
src/alphapower/docs/: correlation_estimate.md
src/alphapower/engine/: __init__.py
src/alphapower/entity/: __init__.py  alpha_profiles.py  alphas.py  checks.py  dal.py  data.py  evaluate.py  simulation.py
src/alphapower/examples/: check_correlation_computation_result.py  consultant_evaluator.py  dal_usage_example.py  evaluate_consultant_regular_alpha.py  evaluate_ppac2025_competition_alpha.py  evaluate_sac2025_alphas.py  evluate_alpha_in_ppac2025.py  evluate_ppac2025_competition_alpha.py  evluate_sac2025_alphas.py  ppac2025_evaluator.py  search_least_relavant_combine_ppac2025.py
src/alphapower/internal/: __init__.py  db_session.py  decorator.py  logging.py  multiprocessing.py  utils.py
src/alphapower/manager/: alpha_manager.py  alpha_manager_abc.py  alpha_profile_manager.py  alpha_profile_manager_abc.py  base.py  correlation_manager.py  data_sets_manager.py  data_sets_manager_abc.py  datasets_manager.py  datasets_manager_abc.py  fast_expression_manager.py  fast_expression_manager_abc.py  options_manager.py  options_manager_abc.py  record_sets_manager.py
src/alphapower/services/: __init__.py  alpha.py  alpha_abc.py  alpha_profiles.py  alpha_profiles_abc.py  common.py  datasets.py  datasets_abc.py  sync_alphas.py  sync_competition.py  sync_datafields.py  sync_datasets.py  task_worker_pool.py
src/alphapower/view/: activities.py  alpha.py  common.py  data.py  evaluate.py  options.py  simulation.py  user.py
tests/: conftest.py  test_client.py  test_correlation_manager.py  test_settings.py
tests/mocks/: mock_task_worker.py
tests/test_client/: conftest.py  test_core.py  test_raw_api.py
tests/test_dal/: test_alphas_dal.py  test_base_dal.py  test_data_dal.py  test_registry_dal.py  test_simulation_dal.py
tests/test_engine/: test_evaluate_base_alpha_fetcher.py  test_evaluate_base_evaluator.py  test_evaluate_base_evaluator_check_correlation.py  test_evaluate_base_evaluator_check_performance_diff.py  test_evaluate_base_evaluator_check_submission.py  test_evaluate_base_evaluator_evaluate_many.py  test_evaluate_base_evaluator_evaluate_one.py  test_task_core.py  test_task_provider.py  test_task_scheduler.py  test_task_worker.py  test_task_worker_pool.py
tests/test_engine/test_simulation/: test_ops.py
tests/test_engine/test_task/: test_core.py  test_provider.py  test_scheduler.py
tests/test_entity/: test_alphas.py  test_alphas_entity.py  test_checks_entity.py  test_dal.py  test_data.py  test_data_entity.py  test_simulation.py  test_simulation_entity.py
tests/test_internal/: test_db_session.py  test_logging.py  test_transactional.py
tests/test_services/: test_sync_alphas.py  test_sync_datafields.py  test_sync_datasets.py
tests/test_utils/: test_logging.py
worldquant/: __exception.py  __func_utils.py  __init__.py  __main__.py  _client.py  _http_api.py  requirements.txt
worldquant/_http_api/: _alphas.py  _common.py  _data.py  _other.py  _simulations.py  _user.py
worldquant/client/: __init__.py  _client.py  core.py
worldquant/config/: settings.py
worldquant/docs/diagrams/: ER_diagram.wsd  alphas_lifecycle.wsd  sync_datafields.wsd
worldquant/docs/openapi/: worldquant.yaml
worldquant/entity/: __init__.py  alphas.py  data.py
worldquant/internal/entity/: alphas.py  simulation.py
worldquant/ops/: __init__.py  _arithmetic.py  _base_operator.py
worldquant/services/: sync_alphas.py  sync_datafields.py  sync_datasets.py
worldquant/storage/: __init__.py  session.py
worldquant/utils/: category_utils.py  client.py  credentials.py  db_utils.py  logging.py  services_utils.py
(+131 files in other folders)
