[project]
name = "alphapower"
version = "0.1.0"
description = "A tool for managing WorldQuant Brain platform data and operations."
authors = [{ name = "Ball Chang", email = "contact@ballchang.com" }]
license = "Proprietary"
readme = "README.md"
keywords = ["alphapower", "worldquant", "brain", "data", "management"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "by (>=0.0.4,<0.0.5)",
    "aiohttp (~=3.11.16)",
    "asyncclick (~=8.1.8.0)",
    "multidict (~=6.2.0)",
    "pydantic (~=2.11.0)",
    "pydantic-settings (~=2.8.1)",
    "python-dotenv (~=1.0.1)",
    "requests (~=2.32.3)",
    "sqlalchemy (~=2.0.38)",
    "structlog (~=25.2.0)",
    "tqdm (~=4.67.1)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pysqlite3 (>=0.5.4,<0.6.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "aiostream (>=0.6.4,<0.7.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[project.urls]
"WorldQuant Brain Platform" = "https://platform.worldquantbrain.com"

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pylint.main]
jobs = 0


[tool.pylint."messages control"]
disable = [
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "W0718",  # unnecessary-comprehension
    "W0719",  # broad-exception-raised
    "C0115 ", # missing-module-docstring
    "C0116 ", # missing-function-docstring
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
pylint = "^3.3.6"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["--rootdir=tests"]
python_files = ["test_*.py", "*.tests.py", "tests.py"]
env = ["ENVIRONMENT=test"]

[tool.mypy]
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
show_error_codes = true
python_version = "3.12"
plugins = "sqlalchemy.ext.mypy.plugin"
